<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sentencer</string>
    <string name="help_file">file:///android_asset/help.html</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="title_how_to_show_cards">How to show cards</string>
    <string name="action_show_face_first">Show face first</string>
    <string name="action_show_back_first">Show back first</string>

    <array name="card_sides">
        <item>Show face first</item>
        <item>Show back first</item>
    </array>

    <string name="title_activity_help">Help</string>
    <string name="title_activity_card">Card</string>
    <string name="button_title_prev">Prev</string>
    <string name="button_title_flip">Flip</string>
    <string name="button_title_next">Next</string>
    <string name="action_showmarked">Show marked</string>
    <string name="action_markcard">Mark card</string>
    <string name="action_unmark">Unmark card</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="pref_title_savestate"></string>
    <string name="pref_summary_savemarked"></string>
    <string name="pref_title_savemarked"></string>
    <string name="pref_title_username"></string>
    <string name="pref_summary_saveappstate"></string>
    <string name="pref_title_saveappstate"></string>
    <string name="msg_no_cards">There are no cards in set</string>
    <string name="label_cards">Cards</string>
    <string name="action_play">Voice</string>
    <string name="msg_no_internet_connection">No internet connection found. Connect your device and try again.</string>
    <string name="action_goto">Go to...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_options">Options</string>
    <string name="msg_no_marked_cards">There is no marked cards in the lesson</string>
    <string name="action_scan_code">Scan QR-code</string>
    <string name="action_add_user_lesson">User lesson</string>
    <string name="please_wait">Please wait ...</string>
    <string name="download_lesson_file">Downloading lesson file...</string>
    <string name="title_activity_user_lesson">UserLessonActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_asset_lesson">AssetLessonActivity</string>
    <string name="tab_asset_lessons">Standard</string>
    <string name="tab_my_lessons">My lessons</string>
    <string name="delete_user_lesson">Delete lesson</string>

</resources>
